--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Virtual Hosts</string>
+    <string name="app_name">Virtual Hosts R</string>
     <string name="action_settings">Settings</string>
     <string name="update_button">更新</string>
     <string name="update_hosts">選擇ip更新hosts</string>
