--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Virtual Hosts</string>
+    <string name="app_name">Virtual Hosts R</string>
     <string name="action_settings">Settings</string>
     <string name="update_button">update</string>
     <string name="update_hosts">select ip update hosts</string>
